# LlaMasterKey

./: .gitignore  Cargo.toml  LICENSE  LlaMasterKey.py  README.md  pyproject.toml  test_anyscale.py  test_chatgpt.py  test_cohere.py
.github/workflows/: build_releases.yml  nightly.yml  pypi.yml
LlaMasterKey/: .rustfmt.toml  __init__.py
LlaMasterKey/examples/: example_cohere.py  example_huggingface.py  example_vectara.py
LlaMasterKey/tests/: test_cohere.py  test_huggingface.py  test_vectara.py
examples/: example_anyscale.py  example_cohere.py  example_huggingface.py  example_openai.py  example_perplexity.py
llamakey/: __init__.py
src/: config.rs  main.rs  state.rs
