[project]
name = "LlaMasterKey"
version = "0.1.0"
authors = [
    { name = "Textea Inc.", email = "bao@textea.co" }
]
description = "One master key for all LLM/GenAI endpoints"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tokens"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire"
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llamakey"]

[project.urls]
homepage = "https://github.com/TexteaInc/LlaMasterKey"

[project.scripts]
lmkc = "llamakey.__init__:__main__"
