[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "llamakey"
version = "0.1.4"
authors = [
    { name = "Textea Inc.", email = "bao@textea.co" }
]
description = "One master key for all LLM/GenAI endpoints"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tokens"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
